kubernetes/apps/home-system/zwavejs2mqtt/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zwavejs2mqtt
  labels:
    app.kubernetes.io/name: zwavejs2mqtt
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 8091
      targetPort: http
      protocol: TCP
      name: http
    - port: 3000
      targetPort: websocket
      protocol: TCP
      name: websocket
  selector:
    app.kubernetes.io/name: zwavejs2mqtt
